--- a/ParseLiveQuery/build.gradle
+++ b/ParseLiveQuery/build.gradle
@@ -24,7 +24,7 @@ android {
 }
 
 dependencies {
-    api "com.github.parse-community.Parse-SDK-Android:parse:1.18.2"
+    api "com.github.Chesteer89.Parse-SDK-Android:parse:master-SNAPSHOT"
     api 'com.squareup.okhttp3:okhttp:3.11.0'
 
     testImplementation 'org.robolectric:robolectric:3.3.1'
