--- a/ParseLiveQuery/build.gradle
+++ b/ParseLiveQuery/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.github.kt3k.coveralls'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
 
     defaultConfig {
         minSdkVersion 15
@@ -24,7 +24,7 @@ android {
 }
 
 dependencies {
-    api "com.github.Chesteer89.Parse-SDK-Android:parse:master"
+    api "com.github.Chesteer89.Parse-SDK-Android:parse:1.18.6.2"
     api 'com.squareup.okhttp3:okhttp:3.11.0'
 
     testImplementation 'org.robolectric:robolectric:3.3.1'
